// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Card Analytical card 1`] = `
<div
  style="display:flex; justify-content:space-around; flex-wrap: wrap"
>
  
    
  <div
    style="width: 300px; height: 400px; margin: 1rem;"
  >
    
        
    <div
      aria-label="Analytical Card Example 1"
      class="fd-card fd-card--analytical"
      role="region"
    >
      
            
      <a
        class="fd-card__header"
        tabindex="0"
      >
        
                
        <div
          class="fd-card__header-text"
        >
          
                    
          <div
            class="fd-card__title-area"
          >
            
                        
            <div
              class="fd-card__title"
            >
              Card Title
            </div>
            
                        
            <span
              class="fd-object-status fd-card__counter"
            >
              Counter
            </span>
            
                    
          </div>
          
                    
          <div
            class="fd-card__subtitle-area"
          >
            
                        
            <div
              class="fd-card__subtitle"
            >
              Card Subtitle
            </div>
            
                        
            <div
              class="fd-card__currency"
            >
              Currency
            </div>
            
                    
          </div>
          
                    
          <div
            class="fd-card__analytics-area"
          >
            
                        
            <div
              class="fd-numeric-content fd-card__numeric-content"
            >
              
                            
              <div
                class="fd-numeric-content__kpi-container"
              >
                
                                
                <div
                  class="fd-numeric-content__kpi"
                >
                  1Ñç
                </div>
                
                            
              </div>
              
                            
              <div
                class="fd-numeric-content__scale-container"
              >
                
                                
                <div
                  class="fd-numeric-content__scale"
                >
                  
                                    
                  <i
                    aria-label="decrease"
                    class="fd-numeric-content__scale-arrow sap-icon--down"
                  />
                  
                                    
                  <span
                    class="fd-numeric-content__scale-text"
                  >
                    M
                  </span>
                  
                                
                </div>
                
                            
              </div>
              
                        
            </div>
            
                        
            <div
              class="fd-card__analytics-container"
            >
              
                            
              <div
                class="fd-card__analytics"
              >
                
                                
                <div
                  class="fd-card__analytics-text"
                >
                  Target
                </div>
                
                                
                <div
                  class="fd-card__analytics-content"
                >
                  110K
                </div>
                
                            
              </div>
              
                            
              <div
                class="fd-card__analytics"
              >
                
                                
                <div
                  class="fd-card__analytics-text"
                >
                  Deviation
                </div>
                
                                
                <div
                  class="fd-card__analytics-content"
                >
                  -35.7%
                </div>
                
                            
              </div>
              
                        
            </div>
            
                    
          </div>
          
                    
          <div
            class="fd-card__second-subtitle"
          >
            Second Subtitle
          </div>
          
                
        </div>
        
            
      </a>
      
            
      <div
        aria-label="Card Content"
        class="fd-card__content"
        role="group"
      />
      
        
    </div>
    
    
  </div>
  

    
  <div
    style="width: 700px; height: 400px; margin: 1rem;"
  >
    
        
    <div
      aria-label="Analytical Card Example 2"
      class="fd-card fd-card--analytical"
      role="region"
    >
      
            
      <a
        class="fd-card__header"
        tabindex="0"
      >
        
                
        <div
          class="fd-badge"
        >
          Badge
        </div>
        
                
        <div
          class="fd-card__header-text"
        >
          
                    
          <div
            class="fd-card__title-area"
          >
            
                        
            <div
              class="fd-card__title"
            >
              Card Title With a Very Long Text ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
            </div>
            
                        
            <span
              class="fd-object-status fd-card__counter"
            >
              Counter
            </span>
            
                    
          </div>
          
                    
          <div
            class="fd-card__subtitle-area"
          >
            
                        
            <div
              class="fd-card__subtitle"
            >
              Card Subtitle With a Very Long Text ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
            </div>
            
                        
            <div
              class="fd-card__currency"
            >
              Currency
            </div>
            
                    
          </div>
          
                    
          <div
            class="fd-card__analytics-area"
          >
            
                        
            <div
              class="fd-numeric-content fd-card__numeric-content"
            >
              
                            
              <div
                class="fd-numeric-content__kpi-container"
              >
                
                                
                <div
                  class="fd-numeric-content__kpi"
                >
                  1Ñç
                </div>
                
                            
              </div>
              
                            
              <div
                class="fd-numeric-content__scale-container"
              >
                
                                
                <div
                  class="fd-numeric-content__scale"
                >
                                                  
                                    
                  <i
                    aria-label="decrease"
                    class="fd-numeric-content__scale-arrow sap-icon--down"
                  />
                  
                                    
                  <span
                    class="fd-numeric-content__scale-text"
                  >
                    M
                  </span>
                  
                                
                </div>
                
                            
              </div>
              
                        
            </div>
            
                        
            <div
              class="fd-card__analytics-container"
            >
              
                            
              <div
                class="fd-card__analytics"
              >
                
                                
                <div
                  class="fd-card__analytics-text"
                >
                  Target
                </div>
                
                                
                <div
                  class="fd-card__analytics-content"
                >
                  110K
                </div>
                
                            
              </div>
              
                            
              <div
                class="fd-card__analytics"
              >
                
                                
                <div
                  class="fd-card__analytics-text"
                >
                  Deviation
                </div>
                
                                
                <div
                  class="fd-card__analytics-content"
                >
                  -35.7%
                </div>
                
                            
              </div>
              
                        
            </div>
            
                    
          </div>
          
                    
          <div
            class="fd-card__second-subtitle"
          >
            Second Subtitle With a Very Long Text ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
          </div>
          
                
        </div>
        
            
      </a>
      
            
      <div
        aria-label="Card Content"
        class="fd-card__content"
        role="group"
      />
      
        
    </div>
    
    
  </div>
  

</div>
`;

exports[`Storyshots Components/Card List card 1`] = `
<div
  style="display:flex; justify-content:space-around; flex-wrap: wrap"
>
  
    
  <div
    style="width: 300px; height: 100%; margin: 1rem;"
  >
    
        
    <div
      aria-label="List Card Example 1"
      class="fd-card"
      role="region"
    >
      
            
      <a
        class="fd-card__header"
        tabindex="0"
      >
        
                
        <div
          class="fd-card__header-text"
        >
          
                    
          <div
            class="fd-card__title-area"
          >
            
                        
            <div
              class="fd-card__title"
            >
              Quick Links
            </div>
            
                        
            <span
              class="fd-object-status fd-card__counter"
            >
              6 of 20
            </span>
            
                    
          </div>
          
                
        </div>
        
            
      </a>
      
            
      <div
        aria-label="Card Content"
        class="fd-card__content"
        role="group"
      >
        
                
        <ul
          class="fd-list fd-list--no-border"
          role="list"
        >
          
                    
          <li
            class="fd-list__item"
            role="listitem"
            tabindex="0"
          >
            
                        
            <i
              class="fd-list__icon sap-icon--cart"
              role="presentation"
            />
            
                        
            <span
              class="fd-list__title"
            >
              List item 1
            </span>
            
                    
          </li>
          
                    
          <li
            class="fd-list__item"
            role="listitem"
            tabindex="0"
          >
            
                        
            <i
              class="fd-list__icon sap-icon--wrench"
              role="presentation"
            />
            
                        
            <span
              class="fd-list__title"
            >
              List item 2
            </span>
            
                    
          </li>
          
                    
          <li
            class="fd-list__item"
            role="listitem"
            tabindex="0"
          >
            
                        
            <i
              class="fd-list__icon sap-icon--leads"
              role="presentation"
            />
            
                        
            <span
              class="fd-list__title"
            >
              List item 3
            </span>
            
                    
          </li>
          
                    
          <li
            class="fd-list__item"
            role="listitem"
            tabindex="0"
          >
            
                        
            <i
              class="fd-list__icon sap-icon--batch-payments"
              role="presentation"
            />
            
                        
            <span
              class="fd-list__title"
            >
              List item 4
            </span>
            
                    
          </li>
          
                    
          <li
            class="fd-list__item"
            role="listitem"
            tabindex="0"
          >
            
                        
            <i
              class="fd-list__icon sap-icon--retail-store"
              role="presentation"
            />
            
                        
            <span
              class="fd-list__title"
            >
              List item 3
            </span>
            
                    
          </li>
          
                    
          <li
            class="fd-list__item"
            role="listitem"
            tabindex="0"
          >
            
                        
            <i
              class="fd-list__icon sap-icon--travel-expense"
              role="presentation"
            />
            
                        
            <span
              class="fd-list__title"
            >
              List item 4
            </span>
            
                    
          </li>
          
                
        </ul>
        
            
      </div>
      
        
    </div>
    
    
  </div>
  
    
  <div
    style="width: 300px; height: 100%; margin: 1rem;"
  >
    
        
    <div
      aria-label="List Card Example 2"
      class="fd-card"
      role="region"
    >
      
            
      <a
        class="fd-card__header"
        tabindex="0"
      >
        
                
        <div
          class="fd-card__header-text"
        >
          
                    
          <div
            class="fd-card__title-area"
          >
            
                        
            <div
              class="fd-card__title"
            >
              Quick Links
            </div>
            
                        
            <span
              class="fd-object-status fd-card__counter"
            >
              6 of 20
            </span>
            
                    
          </div>
          
                    
          <div
            class="fd-card__subtitle-area"
          >
            
                        
            <div
              class="fd-card__subtitle"
            >
              Compact Mode
            </div>
            
                    
          </div>
          
                
        </div>
        
            
      </a>
      
            
      <div
        aria-label="Card Content"
        class="fd-card__content"
        role="group"
      >
        
                
        <ul
          class="fd-list fd-list--no-border fd-list--compact"
          role="list"
        >
          
                    
          <li
            class="fd-list__item"
            role="listitem"
            tabindex="0"
          >
            
                        
            <i
              class="fd-list__icon sap-icon--cart"
              role="presentation"
            />
            
                        
            <span
              class="fd-list__title"
            >
              List item 1
            </span>
            
                    
          </li>
          
                    
          <li
            class="fd-list__item"
            role="listitem"
            tabindex="0"
          >
            
                        
            <i
              class="fd-list__icon sap-icon--wrench"
              role="presentation"
            />
            
                        
            <span
              class="fd-list__title"
            >
              List item 2
            </span>
            
                    
          </li>
          
                    
          <li
            class="fd-list__item"
            role="listitem"
            tabindex="0"
          >
            
                        
            <i
              class="fd-list__icon sap-icon--leads"
              role="presentation"
            />
            
                        
            <span
              class="fd-list__title"
            >
              List item 3
            </span>
            
                    
          </li>
          
                    
          <li
            class="fd-list__item"
            role="listitem"
            tabindex="0"
          >
            
                        
            <i
              class="fd-list__icon sap-icon--batch-payments"
              role="presentation"
            />
            
                        
            <span
              class="fd-list__title"
            >
              List item 4
            </span>
            
                    
          </li>
          
                    
          <li
            class="fd-list__item"
            role="listitem"
            tabindex="0"
          >
            
                        
            <i
              class="fd-list__icon sap-icon--retail-store"
              role="presentation"
            />
            
                        
            <span
              class="fd-list__title"
            >
              List item 3
            </span>
            
                    
          </li>
          
                    
          <li
            class="fd-list__item"
            role="listitem"
            tabindex="0"
          >
            
                        
            <i
              class="fd-list__icon sap-icon--travel-expense"
              role="presentation"
            />
            
                        
            <span
              class="fd-list__title"
            >
              List item 4
            </span>
            
                    
          </li>
          
                
        </ul>
        
            
      </div>
      
        
    </div>
    
    
  </div>
  

</div>
`;

exports[`Storyshots Components/Card Object card 1`] = `
<div
  style="display:flex; justify-content:space-around; flex-wrap: wrap"
>
  
    
  <div
    style="width: 14rem; height: 34rem; margin: 1rem;"
  >
    
        
    <div
      aria-label="Object Card Example 1"
      class="fd-card fd-card--object"
      role="region"
    >
      
            
      <a
        class="fd-card__header"
        tabindex="0"
      >
        
                
        <span
          aria-label="John Doe"
          class="fd-avatar fd-avatar--s fd-avatar--circle fd-avatar--thumbnail fd-card__avatar"
          role="presentation"
          style="background-image: url('/assets/images/avatars/1.svg')"
        />
        
                
        <div
          class="fd-card__header-text"
        >
          
                    
          <div
            class="fd-card__title-area"
          >
            
                        
            <div
              class="fd-card__title"
            >
              Card Title
            </div>
            
                    
          </div>
          
                    
          <div
            class="fd-card__subtitle-area"
          >
            
                        
            <div
              class="fd-card__subtitle"
            >
              Card Subtitle
            </div>
            
                    
          </div>
          
                
        </div>
        
            
      </a>
      
            
      <div
        aria-label="Card Content"
        class="fd-card__content"
        role="group"
      >
        
                
        <div
          class="fd-card__content-container"
        >
          
                    
          <div
            class="fd-card__content-section"
          >
            
                        
            <div
              class="fd-card__content-title-container"
            >
              Group Title 1
            </div>
            
                        
            <div
              class="fd-card__content-group"
            >
              
                            
              <div
                class="fd-card__content-group-text"
              >
                
                                
                <span>
                  Label
                </span>
                
                                
                <span>
                  Text
                </span>
                
                            
              </div>
              
                        
            </div>
            
                        
            <div
              class="fd-card__content-group"
            >
              
                            
              <div
                class="fd-card__content-group-text"
              >
                
                                
                <span>
                  Label
                </span>
                
                                
                <span>
                  Text
                </span>
                
                            
              </div>
              
                        
            </div>
            
                        
            <div
              class="fd-card__content-group"
            >
              
                            
              <div
                class="fd-card__content-group-text"
              >
                
                                
                <span>
                  Label
                </span>
                
                                
                <span>
                  Text
                </span>
                
                            
              </div>
              
                        
            </div>
            
                    
          </div>
          
                    
          <div
            class="fd-card__content-section"
          >
            
                        
            <div
              class="fd-card__content-title-container"
            >
              Group Title 2
            </div>
            
                        
            <div
              class="fd-card__content-group"
            >
              
                            
              <div
                class="fd-card__content-group-text"
              >
                
                                
                <span>
                  Label
                </span>
                
                                
                <span>
                  Text
                </span>
                
                            
              </div>
              
                        
            </div>
            
                        
            <div
              class="fd-card__content-group"
            >
              
                            
              <div
                class="fd-card__content-group-text"
              >
                
                                
                <span>
                  Label
                </span>
                
                                
                <span>
                  Text
                </span>
                
                            
              </div>
              
                        
            </div>
            
                        
            <div
              class="fd-card__content-group"
            >
              
                            
              <div
                class="fd-card__content-group-text"
              >
                
                                
                <span>
                  Label Only
                </span>
                
                            
              </div>
              
                        
            </div>
            
                    
          </div>
          
                
        </div>
        
            
      </div>
      
        
    </div>
    
    
  </div>
  
    
  <div
    style="width: 40rem; height: 20rem; margin: 1rem;"
  >
    
        
    <div
      aria-label="Object Card Example 2"
      class="fd-card fd-card--object"
      role="region"
    >
      
            
      <a
        class="fd-card__header"
        tabindex="0"
      >
        
                
        <span
          aria-label="John Doe"
          class="fd-avatar fd-avatar--s fd-avatar--circle fd-avatar--thumbnail fd-card__avatar"
          role="presentation"
          style="background-image: url('/assets/images/avatars/1.svg')"
        />
        
                
        <div
          class="fd-card__header-text"
        >
          
                    
          <div
            class="fd-card__title-area"
          >
            
                        
            <div
              class="fd-card__title"
            >
              Card Title
            </div>
            
                    
          </div>
          
                    
          <div
            class="fd-card__subtitle-area"
          >
            
                        
            <div
              class="fd-card__subtitle"
            >
              Card Subtitle
            </div>
            
                    
          </div>
          
                
        </div>
        
            
      </a>
      
            
      <div
        aria-label="Card Content"
        class="fd-card__content"
        role="group"
      >
        
                
        <div
          class="fd-card__content-container fd-card__content-container--horizontal"
        >
          
                    
          <div
            class="fd-card__content-section"
          >
            
                        
            <div
              class="fd-card__content-title-container"
            >
              
                            
              <h3
                style="margin: 0;"
              >
                Group Title 1
              </h3>
              
                        
            </div>
            
                        
            <div
              class="fd-card__content-group"
            >
              
                            
              <span
                aria-label="Avatar"
                class="fd-avatar fd-avatar--xs fd-avatar--circle"
              >
                
                                
                <i
                  class="fd-avatar__icon sap-icon--person-placeholder"
                  role="presentation"
                />
                
                            
              </span>
              
                            
              <div
                class="fd-card__content-group-text"
              >
                
                                
                <span
                  style="color: green;"
                >
                  Label
                </span>
                
                                
                <a
                  class="fd-link"
                  href="#"
                  tabindex="0"
                >
                  Link Text
                </a>
                
                            
              </div>
              
                        
            </div>
            
                        
            <div
              class="fd-card__content-group"
            >
              
                            
              <div
                class="fd-card__content-group-text"
              >
                
                                
                <span>
                  Label
                </span>
                
                                
                <span>
                  Text
                </span>
                
                            
              </div>
              
                        
            </div>
            
                        
            <div
              class="fd-card__content-group"
            >
              
                            
              <div
                class="fd-card__content-group-text"
              >
                
                                
                <span>
                  Label
                </span>
                
                                
                <span>
                  Text
                </span>
                
                            
              </div>
              
                        
            </div>
            
                    
          </div>
          
                    
          <div
            class="fd-card__content-section"
          >
            
                        
            <div
              class="fd-card__content-title-container"
            >
              
                            
              <h3
                style="margin: 0;"
              >
                Group Title 2
              </h3>
              
                        
            </div>
            
                        
            <div
              class="fd-card__content-group"
            >
              
                            
              <span
                aria-label="Avatar"
                class="fd-avatar fd-avatar--xs fd-avatar--circle"
              >
                
                                
                <i
                  class="fd-avatar__icon sap-icon--person-placeholder"
                  role="presentation"
                />
                
                            
              </span>
              
                            
              <div
                class="fd-card__content-group-text"
              >
                
                                
                <span
                  style="color: blue"
                >
                  Label
                </span>
                
                            
              </div>
              
                        
            </div>
            
                        
            <div
              class="fd-card__content-group"
            >
              
                            
              <div
                class="fd-card__content-group-text"
              >
                
                                
                <span>
                  Label
                </span>
                
                                
                <span>
                  Text
                </span>
                
                            
              </div>
              
                        
            </div>
            
                        
            <div
              class="fd-card__content-group"
            >
              
                            
              <div
                class="fd-card__content-group-text"
              >
                
                                
                <span>
                  Label
                </span>
                
                                
                <span>
                  Text
                </span>
                
                            
              </div>
              
                        
            </div>
            
                    
          </div>
          
                
        </div>
        
            
      </div>
      
        
    </div>
    
    
  </div>
  

</div>
`;

exports[`Storyshots Components/Card Standard card 1`] = `
<div
  style="display:flex; justify-content:space-around; flex-wrap: wrap"
>
  
    
  <div
    style="width: 300px; height: 400px; margin: 1rem;"
  >
    
        
    <div
      aria-label="Card Anatomy Example 1"
      class="fd-card"
      role="region"
    >
      
            
      <a
        class="fd-card__header"
        tabindex="0"
      >
        
                
        <span
          aria-label="John Doe"
          class="fd-avatar fd-avatar--s fd-avatar--circle fd-avatar--thumbnail fd-card__avatar"
          role="presentation"
          style="background-image: url('/assets/images/backgrounds/city.jpg')"
        />
        
                
        <div
          class="fd-card__header-text"
        >
          
                    
          <div
            class="fd-card__title-area"
          >
            
                        
            <div
              class="fd-card__title"
            >
              Card Title
            </div>
            
                        
            <span
              class="fd-object-status fd-card__counter"
            >
              Counter
            </span>
            
                    
          </div>
          
                    
          <div
            class="fd-card__subtitle-area"
          >
            
                        
            <div
              class="fd-card__subtitle"
            >
              Card Subtitle
            </div>
            
                    
          </div>
          
                
        </div>
        
            
      </a>
      
            
      <div
        aria-label="Card Content"
        class="fd-card__content"
        role="group"
      />
      
        
    </div>
    
    
  </div>
  
    
  <div
    style="width: 300px; height: 400px; margin: 1rem;"
  >
    
        
    <div
      aria-label="Card Anatomy Example 2"
      class="fd-card"
      role="region"
    >
      
            
      <div
        aria-label="Card Content"
        class="fd-card__content"
        role="group"
      />
      
            
      <a
        class="fd-card__header"
        tabindex="0"
      >
        
                
        <span
          aria-label="John Doe"
          class="fd-avatar fd-avatar--s fd-avatar--circle fd-avatar--thumbnail fd-card__avatar"
          role="presentation"
          style="background-image: url('/assets/images/backgrounds/city.jpg')"
        />
        
                
        <div
          class="fd-card__header-text"
        >
          
                    
          <div
            class="fd-card__title-area"
          >
            
                        
            <div
              class="fd-card__title"
            >
              Card Title
            </div>
            
                        
            <span
              class="fd-object-status fd-card__counter"
            >
              Counter
            </span>
            
                    
          </div>
          
                    
          <div
            class="fd-card__subtitle-area"
          >
            
                        
            <div
              class="fd-card__subtitle"
            >
              Card Subtitle
            </div>
            
                    
          </div>
          
                
        </div>
        
            
      </a>
      
        
    </div>
    
    
  </div>
  
    
  <div
    style="width: 300px; height: 400px; margin: 1rem;"
  >
    
        
    <div
      aria-label="Card Anatomy Example 3"
      class="fd-card"
      role="region"
    >
      
            
      <a
        class="fd-card__header"
        tabindex="0"
      >
        
                
        <span
          aria-label="John Doe"
          class="fd-avatar fd-avatar--s fd-avatar--circle fd-avatar--thumbnail fd-card__avatar"
          role="presentation"
          style="background-image: url('/assets/images/backgrounds/city.jpg')"
        />
        
                
        <div
          class="fd-card__header-text"
        >
          
                    
          <div
            class="fd-card__title-area"
          >
            
                        
            <div
              class="fd-card__title"
            >
              Card Title With a Very Long Text ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
            </div>
            
                        
            <span
              class="fd-object-status fd-object-status--informative fd-card__counter"
            >
              1 of 15
            </span>
            
                    
          </div>
          
                    
          <div
            class="fd-card__subtitle-area"
          >
            
                        
            <div
              class="fd-card__subtitle"
            >
              Card Subtitle With a Very Long Text ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
            </div>
            
                    
          </div>
          
                
        </div>
        
            
      </a>
      
            
      <div
        aria-label="Card Content"
        class="fd-card__content"
        role="group"
      />
      
        
    </div>
    
    
  </div>
  
    
  <div
    style="width: 300px; height: 400px; margin: 1rem;"
  >
    
        
    <div
      aria-label="Card Anatomy Example 4"
      class="fd-card"
      role="region"
    >
      
            
      <a
        class="fd-card__header"
        tabindex="0"
      >
        
                
        <span
          aria-label="John Doe"
          class="fd-avatar fd-avatar--s fd-avatar--circle fd-avatar--thumbnail fd-card__avatar"
          role="presentation"
          style="background-image: url('/assets/images/backgrounds/city.jpg')"
        />
        
                
        <div
          class="fd-card__header-text"
        >
          
                    
          <div
            class="fd-card__title-area"
          >
            
                        
            <div
              class="fd-card__title"
            >
              Card Title
            </div>
            
                        
            <span
              class="fd-object-status fd-object-status--positive fd-card__counter"
            >
              6 of 15
            </span>
            
                    
          </div>
          
                
        </div>
        
            
      </a>
      
            
      <div
        aria-label="Card Content"
        class="fd-card__content"
        role="group"
      />
      
        
    </div>
    
    
  </div>
  
    
  <div
    style="width: 300px; height: 400px; margin: 1rem;"
  >
    
        
    <div
      aria-label="Card Anatomy Example 5"
      class="fd-card"
      role="region"
    >
      
            
      <div
        class="fd-badge"
      >
        Badge
      </div>
      
            
      <a
        class="fd-card__header"
        tabindex="0"
      >
        
                
        <div
          class="fd-card__header-text"
        >
          
                    
          <div
            class="fd-card__title-area"
          >
            
                        
            <div
              class="fd-card__title"
            >
              Card Title
            </div>
            
                        
            <span
              class="fd-object-status fd-object-status--critical fd-card__counter"
            >
              3 of 15
            </span>
            
                    
          </div>
          
                    
          <div
            class="fd-card__subtitle-area"
          >
            
                        
            <div
              class="fd-card__subtitle"
            >
              Card Subtitle
            </div>
            
                    
          </div>
          
                
        </div>
        
            
      </a>
      
            
      <div
        aria-label="Card Content"
        class="fd-card__content"
        role="group"
      />
      
        
    </div>
    
    
  </div>
  
    
  <div
    style="width: 300px; height: 400px; margin: 1rem;"
  >
    
        
    <div
      aria-label="Card Anatomy Example 6"
      class="fd-card"
      role="region"
    >
      
            
      <div
        class="fd-badge"
      >
        Badge
      </div>
      
            
      <div
        aria-label="Card Content"
        class="fd-card__content"
        role="group"
      />
      
            
      <a
        class="fd-card__header"
        tabindex="0"
      >
        
                
        <div
          class="fd-card__header-text"
        >
          
                    
          <div
            class="fd-card__title-area"
          >
            
                        
            <div
              class="fd-card__title"
            >
              Card Title
            </div>
            
                        
            <span
              class="fd-object-status fd-object-status--critical fd-card__counter"
            >
              3 of 15
            </span>
            
                    
          </div>
          
                    
          <div
            class="fd-card__subtitle-area"
          >
            
                        
            <div
              class="fd-card__subtitle"
            >
              Card Subtitle
            </div>
            
                    
          </div>
          
                
        </div>
        
            
      </a>
      
        
    </div>
    
    
  </div>
  
    
  <div
    style="width: 300px; height: 400px; margin: 1rem;"
  >
    
        
    <div
      aria-label="Card Anatomy Example 7"
      class="fd-card"
      role="region"
    >
      
            
      <div
        class="fd-badge"
      >
        New
      </div>
      
            
      <a
        class="fd-card__header"
        tabindex="0"
      >
        
                
        <div
          class="fd-card__header-text"
        >
          
                    
          <div
            class="fd-card__title-area"
          >
            
                        
            <div
              class="fd-card__title"
            >
              Card Title With a Very Long Text ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
            </div>
            
                        
            <span
              class="fd-object-status fd-card__counter"
            >
              1 of 15
            </span>
            
                    
          </div>
          
                    
          <div
            class="fd-card__subtitle-area"
          >
            
                        
            <div
              class="fd-card__subtitle"
            >
              Card Subtitle With a Very Long Text ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
            </div>
            
                    
          </div>
          
                
        </div>
        
            
      </a>
      
            
      <div
        aria-label="Card Content"
        class="fd-card__content"
        role="group"
      />
      
        
    </div>
    
    
  </div>
  
    
  <div
    style="width: 300px; height: 400px; margin: 1rem;"
  >
    
        
    <div
      aria-label="8"
      class="fd-card"
      role="region"
    >
      
            
      <div
        class="fd-badge"
      >
        Updated Content
      </div>
      
            
      <a
        class="fd-card__header"
        tabindex="0"
      >
        
                
        <div
          class="fd-card__header-text"
        >
          
                    
          <div
            class="fd-card__title-area"
          >
            
                        
            <div
              class="fd-card__title"
            >
              Card Title
            </div>
            
                        
            <span
              class="fd-object-status fd-card__counter"
            >
              1 of 15
            </span>
            
                    
          </div>
          
                
        </div>
        
            
      </a>
      
            
      <div
        aria-label="Card Content"
        class="fd-card__content"
        role="group"
      />
      
        
    </div>
    
    
  </div>
  

</div>
`;

exports[`Storyshots Components/Card Table card 1`] = `
<div
  style="display:flex; justify-content:space-around; flex-wrap: wrap"
>
  
    
  <div
    style="width: 500px; height: 100%; margin: 1rem;"
  >
    
        
    <div
      aria-label="Table Card Example 1"
      class="fd-card fd-card--table"
      role="region"
    >
      
            
      <a
        class="fd-card__header"
        tabindex="0"
      >
        
                
        <div
          class="fd-card__header-text"
        >
          
                    
          <div
            class="fd-card__title-area"
          >
            
                        
            <div
              class="fd-card__title"
            >
              Table Card
            </div>
            
                        
            <span
              class="fd-object-status fd-card__counter"
            >
              4 of 20
            </span>
            
                    
          </div>
          
                
        </div>
        
            
      </a>
      
            
      <div
        aria-label="Card Content"
        class="fd-card__content"
        role="group"
      >
        
                
        <table
          class="fd-table fd-table--no-horizontal-borders fd-table--no-vertical-borders"
        >
          
                    
          <thead
            class="fd-table__header"
          >
            
                        
            <tr
              class="fd-table__row"
            >
              
                            
              <th
                class="fd-table__cell fd-table__cell--checkbox"
              >
                
                                
                <input
                  aria-label="checkbox"
                  class="fd-checkbox"
                  id="kqqzPI"
                  type="checkbox"
                />
                
                                
                <label
                  class="fd-checkbox__label"
                  for="kqqzPI"
                />
                
                            
              </th>
              
                            
              <th
                class="fd-table__cell"
                scope="col"
              >
                Name
              </th>
              
                            
              <th
                class="fd-table__cell"
                scope="col"
              >
                Status
              </th>
              
                            
              <th
                class="fd-table__cell"
                scope="col"
              >
                Price
              </th>
              
                            
              <th
                class="fd-table__cell"
                scope="col"
              >
                Country
              </th>
              
                            
              <th
                class="fd-table__cell"
              />
              
                        
            </tr>
            
                    
          </thead>
          
                    
          <tbody
            class="fd-table__body"
          >
            
                        
            <tr
              class="fd-table__row"
            >
              
                            
              <td
                class="fd-table__cell fd-table__cell--checkbox"
              >
                
                                
                <input
                  aria-label="checkbox"
                  class="fd-checkbox"
                  id="EWuzWh"
                  type="checkbox"
                />
                
                                
                <label
                  class="fd-checkbox__label"
                  for="EWuzWh"
                />
                
                            
              </td>
              
                            
              <td
                class="fd-table__cell"
              >
                Banana
              </td>
              
                            
              <td
                class="fd-table__cell"
              >
                
                                
                <span
                  class="fd-object-status fd-object-status--positive"
                >
                  
                                    Available
                                
                </span>
                
                            
              </td>
              
                            
              <td
                class="fd-table__cell"
              >
                5 EUR
              </td>
              
                            
              <td
                class="fd-table__cell"
              >
                India
              </td>
              
                            
              <td
                class="fd-table__cell fd-table__cell--fit-content fd-table__cell--no-padding"
              >
                
                                
                <i
                  class="fd-table__icon fd-table__icon--navigation sap-icon--navigation-right-arrow"
                  role="presentation"
                />
                
                            
              </td>
              
                        
            </tr>
            
                        
            <tr
              class="fd-table__row"
            >
              
                            
              <td
                class="fd-table__cell fd-table__cell--checkbox"
              >
                
                                
                <input
                  aria-label="checkbox"
                  class="fd-checkbox"
                  id="19j0Sc"
                  type="checkbox"
                />
                
                                
                <label
                  class="fd-checkbox__label"
                  for="19j0Sc"
                />
                
                            
              </td>
              
                            
              <td
                class="fd-table__cell"
              >
                Pineapple
              </td>
              
                            
              <td
                class="fd-table__cell"
              >
                
                                
                <span
                  class="fd-object-status fd-object-status--negative"
                >
                  
                                    Out of stock
                                
                </span>
                
                            
              </td>
              
                            
              <td
                class="fd-table__cell"
              >
                2 EUR
              </td>
              
                            
              <td
                class="fd-table__cell"
              >
                Mexico
              </td>
              
                            
              <td
                class="fd-table__cell fd-table__cell--fit-content fd-table__cell--no-padding"
              >
                
                                
                <i
                  class="fd-table__icon fd-table__icon--navigation sap-icon--navigation-right-arrow"
                  role="presentation"
                />
                
                            
              </td>
              
                        
            </tr>
            
                        
            <tr
              class="fd-table__row"
            >
              
                            
              <td
                class="fd-table__cell fd-table__cell--checkbox"
              >
                
                                
                <input
                  aria-label="checkbox"
                  class="fd-checkbox"
                  id="a7SfGX"
                  type="checkbox"
                />
                
                                
                <label
                  class="fd-checkbox__label"
                  for="a7SfGX"
                />
                
                            
              </td>
              
                            
              <td
                class="fd-table__cell"
              >
                Orange
              </td>
              
                            
              <td
                class="fd-table__cell"
              >
                
                                
                <span
                  class="fd-object-status fd-object-status--informative"
                >
                  
                                    Temporary unavailable
                                
                </span>
                
                            
              </td>
              
                            
              <td
                class="fd-table__cell"
              >
                6 EUR
              </td>
              
                            
              <td
                class="fd-table__cell"
              >
                Spain
              </td>
              
                            
              <td
                class="fd-table__cell fd-table__cell--fit-content fd-table__cell--no-padding"
              >
                
                                
                <i
                  class="fd-table__icon fd-table__icon--navigation sap-icon--navigation-right-arrow"
                  role="presentation"
                />
                
                            
              </td>
              
                        
            </tr>
            
                    
          </tbody>
          
                
        </table>
        
            
      </div>
      
        
    </div>
    
    
  </div>
  
    
  <div
    style="width: 500px; height: 100%; margin: 1rem;"
  >
    
        
    <div
      aria-label="Table Card Example 2"
      class="fd-card fd-card--table fd-card--compact"
      role="region"
    >
      
            
      <a
        class="fd-card__header"
        tabindex="0"
      >
        
                
        <div
          class="fd-card__header-text"
        >
          
                    
          <div
            class="fd-card__title-area"
          >
            
                        
            <div
              class="fd-card__title"
            >
              Table Card
            </div>
            
                        
            <span
              class="fd-object-status fd-card__counter"
            >
              4 of 20
            </span>
            
                    
          </div>
          
                    
          <div
            class="fd-card__subtitle-area"
          >
            
                        
            <div
              class="fd-card__subtitle"
            >
              Compact Mode
            </div>
            
                    
          </div>
          
                
        </div>
        
            
      </a>
      
            
      <div
        aria-label="Card Content"
        class="fd-card__content"
        role="group"
      >
        
                
        <table
          class="fd-table fd-table--compact fd-table--no-horizontal-borders fd-table--no-vertical-borders"
        >
          
                    
          <thead
            class="fd-table__header"
          >
            
                        
            <tr
              class="fd-table__row"
            >
              
                            
              <th
                class="fd-table__cell"
                scope="col"
              >
                Name
              </th>
              
                            
              <th
                class="fd-table__cell"
                scope="col"
              >
                Status
              </th>
              
                            
              <th
                class="fd-table__cell"
                scope="col"
              >
                Price
              </th>
              
                            
              <th
                class="fd-table__cell"
                scope="col"
              >
                Country
              </th>
              
                            
              <th
                class="fd-table__cell"
              />
              
                        
            </tr>
            
                    
          </thead>
          
                    
          <tbody
            class="fd-table__body"
          >
            
                        
            <tr
              class="fd-table__row"
            >
              
                            
              <td
                class="fd-table__cell"
              >
                Banana
              </td>
              
                            
              <td
                class="fd-table__cell"
              >
                
                                
                <span
                  class="fd-object-status fd-object-status--positive"
                >
                  
                                    Available
                                
                </span>
                
                            
              </td>
              
                            
              <td
                class="fd-table__cell"
              >
                5 EUR
              </td>
              
                            
              <td
                class="fd-table__cell"
              >
                India
              </td>
              
                            
              <td
                class="fd-table__cell fd-table__cell--fit-content fd-table__cell--no-padding"
              >
                
                                
                <i
                  class="fd-table__icon fd-table__icon--navigation sap-icon--navigation-right-arrow"
                  role="presentation"
                />
                
                            
              </td>
              
                        
            </tr>
            
                        
            <tr
              class="fd-table__row"
            >
              
                            
              <td
                class="fd-table__cell"
              >
                Pineapple
              </td>
              
                            
              <td
                class="fd-table__cell"
              >
                
                                
                <span
                  class="fd-object-status fd-object-status--negative"
                >
                  
                                    Out of stock
                                
                </span>
                
                            
              </td>
              
                            
              <td
                class="fd-table__cell"
              >
                2 EUR
              </td>
              
                            
              <td
                class="fd-table__cell"
              >
                Mexico
              </td>
              
                            
              <td
                class="fd-table__cell fd-table__cell--fit-content fd-table__cell--no-padding"
              >
                
                                
                <i
                  class="fd-table__icon fd-table__icon--navigation sap-icon--navigation-right-arrow"
                  role="presentation"
                />
                
                            
              </td>
              
                        
            </tr>
            
                        
            <tr
              class="fd-table__row"
            >
              
                            
              <td
                class="fd-table__cell"
              >
                Orange
              </td>
              
                            
              <td
                class="fd-table__cell"
              >
                
                                
                <span
                  class="fd-object-status fd-object-status--informative"
                >
                  
                                    Temporary unavailable
                                
                </span>
                
                            
              </td>
              
                            
              <td
                class="fd-table__cell"
              >
                6 EUR
              </td>
              
                            
              <td
                class="fd-table__cell"
              >
                Spain
              </td>
              
                            
              <td
                class="fd-table__cell fd-table__cell--fit-content fd-table__cell--no-padding"
              >
                
                                
                <i
                  class="fd-table__icon fd-table__icon--navigation sap-icon--navigation-right-arrow"
                  role="presentation"
                />
                
                            
              </td>
              
                        
            </tr>
            
                    
          </tbody>
          
                
        </table>
        
            
      </div>
      
        
    </div>
    
    
  </div>
  

</div>
`;
